--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     
     <title>Menghua Jiang's Homepage</title>
     <style>
+      /* 固定页面宽度为1200px */
+      #tlayout {
+        width: 1200px;
+        margin: 0 auto; /* 水平居中 */
+      }
+          
       /* 恢复原有的标题紫色样式 */
       .paper-title {
         color: #800080; /* 原来的紫色 */
@@ -110,8 +116,8 @@
             <!-- DeepDist 论文 -->
             <li style="margin-bottom: 20px;">
               <p>
-                <b><span style="color: #800080;">Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting</span></b>
-                <b><a href="https://github.com/jmhmaxsat/DeepDist">[code]</a></b><br />
+                <span style="color: #800080;">Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting</span>
+                <a href="https://github.com/jmhmaxsat/DeepDist">[code]</a><br />
                 <b><u>Menghua Jiang</u></b>, Haokai Gao, Shuhao Chen, Yin Chen*<br />
                 Under Review
               </p>
@@ -120,8 +126,8 @@
             <!-- HistLS 论文 -->
             <li style="margin-bottom: 20px;">
               <p>
-                <b><span style="color: #800080;">Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information</span></b>
-                <b><a href="https://github.com/jmhmaxsat/HistLS">[code]</a></b><br />
+                <span style="color: #800080;">Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information</span>
+                <a href="https://github.com/jmhmaxsat/HistLS">[code]</a><br />
                 <b><u>Menghua Jiang</u></b>, Rui Zhang, Yin Chen*<br />
                 <i>The 31st International Computing and Combinatorics Conference (COCOON 2025)</i> <br />
                 <!--  <span style="background-color: #fb8c00; color: #ffffff; font-weight: bold; padding: 2px 8px; border-radius: 4px">CCF-B</span>  --> 
@@ -133,7 +139,7 @@
             <!-- SNRWLS 论文 -->
             <li style="margin-bottom: 20px;">
               <p>
-                <b><span style="color: #800080;">SNRWLS: Improve (W)PMS Solver with Weighting Strategies Related to Number of Soft Clauses</span></b><br />
+                <span style="color: #800080;">SNRWLS: Improve (W)PMS Solver with Weighting Strategies Related to Number of Soft Clauses</span><br />
                 Shuhao Chen, <b><u>Menghua Jiang</u></b>, Yin Chen*<br />
                 <i>The 19th International Symposium on Theoretical Aspects of Software Engineering (TASE 2025)</i> <br />
                 <!-- <span style="background-color: #f0f0f0; padding: 2px 6px; border-radius: 2px;">CCF-C</span> 
@@ -144,9 +150,9 @@
             <!-- RASLite 论文 -->
             <li style="margin-bottom: 20px;">
               <p>                
-                <b><span style="color: #800080;">RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach</span></b>
-                <b><a href="https://ieeexplore.ieee.org/abstract/document/10580189" target="_blank">[paper]</a></b>
-                <b><a href="https://github.com/jmhmaxsat/RASLite">[code]</a></b><br />
+                <span style="color: #800080;">RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach</span>
+                <a href="https://ieeexplore.ieee.org/abstract/document/10580189" target="_blank">[paper]</a>
+                <a href="https://github.com/jmhmaxsat/RASLite">[code]</a><br />
                 <b><u>Menghua Jiang</u></b>, Yin Chen*<br />
                 <i>2024 27th International Conference on Computer Supported Cooperative Work in Design (CSCWD 2024)</i> <br />
                 <!-- <span style="background-color: #f0f0f0; padding: 2px 6px; border-radius: 2px;">CCF-C</span> -->
