--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               <p>
                 <span style="color: #800080;">Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting</span>
                 <a href="https://github.com/jmhmaxsat/DeepDist">[code]</a><br />
-                <b><u>Menghua Jiang</u></b>, Haokai Gao, Shuhao Chen, Yin Chen*<br />
+                <u>Menghua Jiang</u>, Haokai Gao, Shuhao Chen, Yin Chen*<br />
                 Under Review
               </p>
             </li>
@@ -122,8 +122,8 @@
               <p>
                 <span style="color: #800080;">Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information</span>
                 <a href="https://github.com/jmhmaxsat/HistLS">[code]</a><br />
-                <b><u>Menghua Jiang</u></b>, Rui Zhang, Yin Chen*<br />
-                <i>The 31st International Computing and Combinatorics Conference (COCOON 2025)</i> <br />
+                <u>Menghua Jiang</u>, Rui Zhang, Yin Chen*<br />
+                <i>The 31st International Computing and Combinatorics Conference</i> (COCOON 2025) <br />
                 <!--  <span style="background-color: #fb8c00; color: #ffffff; font-weight: bold; padding: 2px 8px; border-radius: 4px">CCF-B</span>  --> 
                 <!-- <span style="background-color: #f0f0f0; padding: 2px 6px; border-radius: 2px;">CCF-B</span>
                 &nbsp<span style="background-color: #f0f0f0; padding: 2px 6px; border-radius: 2px;">Acceptance Rate: 28.3%</span> -->
@@ -134,8 +134,8 @@
             <li style="margin-bottom: 20px;">
               <p>
                 <span style="color: #800080;">SNRWLS: Improve (W)PMS Solver with Weighting Strategies Related to Number of Soft Clauses</span><br />
-                Shuhao Chen, <b><u>Menghua Jiang</u></b>, Yin Chen*<br />
-                <i>The 19th International Symposium on Theoretical Aspects of Software Engineering (TASE 2025)</i> <br />
+                Shuhao Chen, <u>Menghua Jiang</u>, Yin Chen*<br />
+                <i>The 19th International Symposium on Theoretical Aspects of Software Engineering</i> (TASE 2025) <br />
                 <!-- <span style="background-color: #f0f0f0; padding: 2px 6px; border-radius: 2px;">CCF-C</span> 
                 &nbsp<span style="background-color: #f0f0f0; padding: 2px 6px; border-radius: 2px;">Acceptance Rate: 24.2%</span> -->
               </p>
@@ -148,7 +148,7 @@
                 <a href="https://ieeexplore.ieee.org/abstract/document/10580189" target="_blank">[paper]</a>
                 <a href="https://github.com/jmhmaxsat/RASLite">[code]</a><br />
                 <u>Menghua Jiang</u>, Yin Chen*<br />
-                <i>2024 27th International Conference on Computer Supported Cooperative Work in Design (CSCWD 2024)</i> <br />
+                <i>2024 27th International Conference on Computer Supported Cooperative Work in Design</i> (CSCWD 2024) <br />
                 <!-- <span style="background-color: #f0f0f0; padding: 2px 6px; border-radius: 2px;">CCF-C</span> -->
               </p>
             </li>
@@ -160,7 +160,7 @@
                 <a href="https://link.springer.com/chapter/10.1007/978-3-031-40289-0_21" target="_blank">[paper]</a>
                 <a href="https://github.com/whyte-yhy/SATLC" target="_blank">[code]</a><br />
                 Hanyi Yu, <u>Menghua Jiang</u>, Yin Chen*<br />
-                <i>The 16th International Conference on Knowledge Science, Engineering and Management (KSEM 2023)</i> <br />
+                <i>The 16th International Conference on Knowledge Science, Engineering and Management</i> (KSEM 2023) <br />
                 <!-- <span style="background-color: #f0f0f0; padding: 2px 6px; border-radius: 2px;">CCF-C</span>
                 <span style="background-color: #228b22; color: #ffffff; font-weight: bold; padding: 2px 8px; border-radius: 4px">CCF-C</span>  -->  
               </p>
