--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <span style="color: #800080;">RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach</span>
                 <a href="https://ieeexplore.ieee.org/abstract/document/10580189" target="_blank">[paper]</a>
                 <a href="https://github.com/jmhmaxsat/RASLite">[code]</a><br />
-                <u>Menghua Jiang</u>, Yin Chen*<br />
+                <u style="text-decoration-color: #800080; text-decoration-thickness: 2px;">Menghua Jiang</u>, Yin Chen*<br />
                 <i>2024 27th International Conference on Computer Supported Cooperative Work in Design</i> (CSCWD 2024) <br />
                 <!-- <span style="background-color: #f0f0f0; padding: 2px 6px; border-radius: 2px;">CCF-C</span> -->
               </p>
@@ -159,7 +159,7 @@
                 <span style="color: #800080;">Heavy Weighting for Potential Important Clauses</span>
                 <a href="https://link.springer.com/chapter/10.1007/978-3-031-40289-0_21" target="_blank">[paper]</a>
                 <a href="https://github.com/whyte-yhy/SATLC" target="_blank">[code]</a><br />
-                Hanyi Yu, <u>Menghua Jiang</u>, Yin Chen*<br />
+                Hanyi Yu, <span style="border-bottom: 2px solid #228B22;">Menghua Jiang</span>, Yin Chen*<br />
                 <i>The 16th International Conference on Knowledge Science, Engineering and Management</i> (KSEM 2023) <br />
                 <!-- <span style="background-color: #f0f0f0; padding: 2px 6px; border-radius: 2px;">CCF-C</span>
                 <span style="background-color: #228b22; color: #ffffff; font-weight: bold; padding: 2px 8px; border-radius: 4px">CCF-C</span>  -->  
