--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               <p>
                 <span style="color: #800080;">Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting</span>
                 <a href="https://github.com/jmhmaxsat/DeepDist">[code]</a><br />
-                <u>Menghua Jiang</u>, Haokai Gao, Shuhao Chen, Yin Chen*<br />
+                <span style="border-bottom: 2px solid #228B22;">Menghua Jiang</span>, Haokai Gao, Shuhao Chen, Yin Chen*<br />
                 Under Review
               </p>
             </li>
@@ -122,7 +122,7 @@
               <p>
                 <span style="color: #800080;">Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information</span>
                 <a href="https://github.com/jmhmaxsat/HistLS">[code]</a><br />
-                <u>Menghua Jiang</u>, Rui Zhang, Yin Chen*<br />
+                <span style="border-bottom: 2px solid #228B22;">Menghua Jiang</span>, Rui Zhang, Yin Chen*<br />
                 <i>The 31st International Computing and Combinatorics Conference</i> (COCOON 2025) <br />
                 <!--  <span style="background-color: #fb8c00; color: #ffffff; font-weight: bold; padding: 2px 8px; border-radius: 4px">CCF-B</span>  --> 
                 <!-- <span style="background-color: #f0f0f0; padding: 2px 6px; border-radius: 2px;">CCF-B</span>
@@ -134,7 +134,7 @@
             <li style="margin-bottom: 20px;">
               <p>
                 <span style="color: #800080;">SNRWLS: Improve (W)PMS Solver with Weighting Strategies Related to Number of Soft Clauses</span><br />
-                Shuhao Chen, <u>Menghua Jiang</u>, Yin Chen*<br />
+                Shuhao Chen, <span style="border-bottom: 2px solid #228B22;">Menghua Jiang</span>, Yin Chen*<br />
                 <i>The 19th International Symposium on Theoretical Aspects of Software Engineering</i> (TASE 2025) <br />
                 <!-- <span style="background-color: #f0f0f0; padding: 2px 6px; border-radius: 2px;">CCF-C</span> 
                 &nbsp<span style="background-color: #f0f0f0; padding: 2px 6px; border-radius: 2px;">Acceptance Rate: 24.2%</span> -->
@@ -147,7 +147,7 @@
                 <span style="color: #800080;">RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach</span>
                 <a href="https://ieeexplore.ieee.org/abstract/document/10580189" target="_blank">[paper]</a>
                 <a href="https://github.com/jmhmaxsat/RASLite">[code]</a><br />
-                <u style="text-decoration-color: #800080; text-decoration-thickness: 2px;">Menghua Jiang</u>, Yin Chen*<br />
+                <span style="border-bottom: 2px solid #228B22;">Menghua Jiang</span>, Yin Chen*<br />
                 <i>2024 27th International Conference on Computer Supported Cooperative Work in Design</i> (CSCWD 2024) <br />
                 <!-- <span style="background-color: #f0f0f0; padding: 2px 6px; border-radius: 2px;">CCF-C</span> -->
               </p>
