--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+  <div id="layout-content" style="margin-top:25px; max-width: 960px; margin-left: auto; margin-right: auto;"></div>
   <table summary="Table for page layout." id="tlayout">
     <tr valign="top">
       <td id="layout-menu">
