--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <table summary="Table for page layout." id="tlayout">
     <tr valign="top">
-      <td id="layout-menu">
+      <td id="layout-menu" width="670">
         <div class="menu-category">Menu</div>
         <div class="menu-item"><b><a href="index.html" class="current">Home</a></b></div>
         <div class="menu-item"><b><a href="https://scholar.google.com/citations?user=6rn8tzsAAAAJ" target="_blank">Google Scholar</a></b></div>
