--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<meta name="description" content="Wenke Huang's homepage">
+	<meta name="description" content="Menghua Jiang's homepage">
 	<link rel="stylesheet" href="jemdoc.css" type="text/css">
-	<title>Wenke Huang (黄文柯)</title>
+	<title>Menghua Jiang (蒋梦华)</title>
    <link rel="icon" type="image/png" href="https://www.whu.edu.cn/__local/5/2F/C2/57EDDD9FB0DF712F3AB627163C2_1EF15655_13FCA.png">
 </head>
 
@@ -15,14 +15,14 @@
     <tr>
     <td width="670">
     <div id="toptitle">
-    <h1>Wenke Huang (黄文柯) </h1>
+    <h1>Menghua Jiang (蒋梦华) </h1>
     </div>
-    <img style="max-width:30%" alt="Chinese Name photo" src="images/wenke_name_2023.jpg" class="hoverZoomLink">
-    <br> Chinese name 👆 written by handsome Dad.
-    <h3> Ph.D. Student</h3>
+<!--     <img style="max-width:30%" alt="Chinese Name photo" src="images/wenke_name_2023.jpg" class="hoverZoomLink">
+    <br> Chinese name 👆 written by handsome Dad. -->
+    <h3> Master's student</h3>
     <p>
-    School of Computer Science, Wuhan University<br>
-    Email:  <a href="mailto:wenkehuang@whu.edu.cn">wenkehuang@whu.edu.cn</a> <br>
+    School of Computer Science, South China Normal University<br>
+    Email:  <a href="mailto:jiangmenghua@m.scnu.edu.cn">jiangmenghua@m.scnu.edu.cn</a> <br>
 <!--    CV: <a href="/data/wenke_CNCV.pdf">[CN-CV]</a> / <a href="/data/wenke_CV.pdf">[CV]</a> <br>-->
     <a href="https://scholar.google.com/citations?hl=zh-CN&user=aFoCI3MAAAAJ" target="_blank">[Google Scholar]</a>
 <!--    <a href="https://blog.csdn.net/qq_41409438?spm=1010.2135.3001.5343">[CSDN]</a>-->
