--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ I was supported by the Fundamental Research Project for Young Professional from 
   }
 </style>
 <ul style="list-style-type: none; padding-left: 0; margin: 0;">
-<li>[2025.5] Several papers on MLLM Tuning, Federated Learning are accepted by ICML2025/IJCAI 2025 (<b><font color="red">One Spotlight</font></b>)
+<!-- <li>[2025.5] Several papers on MLLM Tuning, Federated Learning are accepted by ICML2025/IJCAI 2025 (<b><font color="red">One Spotlight</font></b>)
 
 <li>[2025.2] Four papers on MLLM Tuning, Federated Learning are accepted by CVPR 2025 (<b><font color="red">Two Oral</font></b>)
 
@@ -93,9 +93,9 @@ I was supported by the Fundamental Research Project for Young Professional from 
 
 <li>[2023.10] One paper is accepted by IEEE TPAMI
 
-<li>[2023.2] One papers is accepted by CVPR 2023
+<li>[2023.2] One papers is accepted by CVPR 2023 -->
 
-<li>[2022.2] One papers is accepted by CVPR 2022
+[2025.5] One papers is accepted by COCOON 2025
 
 </li>
 </ul>
@@ -389,7 +389,7 @@ I was supported by the Fundamental Research Project for Young Professional from 
 
 
 
-<h2>Academic Service</h2>
+<!-- <h2>Academic Service</h2>
 <table>
 <tbody><tr>
 <td style="width:20px">
@@ -413,9 +413,9 @@ I was supported by the Fundamental Research Project for Young Professional from 
 <li>武汉计算机软件工程学会-学术交流活动, 2024 Sep,  <b><a href="https://mp.weixin.qq.com/s/hgUY0a2PVNWehx_MAXLksA">Link</a></b>
 <li>中国图象图形学学会-第四期学生会员分享论坛, 2023 June,  <b><a href="https://mp.weixin.qq.com/s/1NdcjW0HxwMpPpSMOsSWhQ">Link</a></b>
 </li>
-</ul>
+</ul> -->
 
-<h2>Misc </h2>
+<!-- <h2>Misc </h2>
 <ul>
 <li>
 <details>
@@ -475,7 +475,8 @@ To see the world, things dangerous to come to, to see behind walls, to draw clos
 纯真而不欠闻达，善良而不失坚强，把生命高举在尘埃之上，又融化于社会之中，这应当是我们这一代的共同追求
 </li>
 </ul>
-
+ -->
+	
 <a href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?wenkehuang"
 border="0" alt="Website Hit Counters"></a>
@@ -483,6 +484,6 @@ border="0" alt="Website Hit Counters"></a>
 <div id="footer">
 	<div id="footer-text"></div>
 </div>
-Last update: 06/2025 by Wenke Huang.
+Last update: 06/2025 by Menghua Jiang.
 </body>
 </html>
