--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ I was supported by the Fundamental Research Project for Young Professional from 
 </div>
 <h2>Selected Publications </h2>
 
-†: equal contribution, * : corresponding author
+†: equal contribution, *: corresponding author
 
 <h3>Survey</h3>
 <ul>
@@ -327,20 +327,19 @@ I was supported by the Fundamental Research Project for Young Professional from 
 
 <h3>2022</h3>
 <ul>
-   <li>
-      Few-Shot Model Agnostic Federated Learning <br>
-              <b>Wenke Huang</b>, Mang Ye, Bo Du, Xiang Gao<br>
-      <i>ACM Multimedia (<b>ACM MM</b>), <b><font color="red">CCF-A</font></b>, 2022</i><br>
-        [<a href="https://dl.acm.org/doi/abs/10.1145/3503161.3548764">Paper</a>][<a href="https://github.com/FangXiuwen/FSMAFL">Code</a>]
-   </li>
-   <li>
-      Learn from Others and Be Yourself in Heterogeneous Federated Learning<br>
-              <b>Wenke Huang</b>, Mang Ye, Bo Du<br>
-      <i>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), <b><font color="red">CCF-A</font></b>, 2022 </i> <br>
-        [<a href="https://ieeexplore.ieee.org/document/9879190/">Paper</a>][<a href="https://github.com/WenkeHuang/FCCL">Code</a>]
+   <li class="publication-item">
+      <span class="paper-title">Heavy Weighting for Potential Important Clauses</span><br>
+      <span class="authors">Hanyi Yu, <b>Hanyi Yu</b>, Yin Chen*</span><br>
+      <span class="venue"><i>The 16th International Conference on Knowledge Science, Engineering and Management(<b>KSEM</b>), <b><font color="green">CCF-C</font></b>, 2023</i></span><br>
+      <span class="links">
+        [<a href="https://link.springer.com/chapter/10.1007/978-3-031-40289-0_21" target="_blank">Paper</a>]
+        [<a href="https://github.com/whyte-yhy/SATLC">Code</a>]
+      </span>
    </li>
 </ul>
 
+
+	
 <h2>Selected Awards and Honors</h2>
 <ul>
 <li>Youth Talents Support Project - Doctoral Student Special Program, 2025 January <br>
