--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ I was supported by the Fundamental Research Project for Young Professional from 
 
 †: equal contribution, *: corresponding author
 
-<h3>Survey</h3>
+<!-- <h3>Survey</h3>
 <ul>
     <li>
       Keeping Yourself is Important in Downstream Tuning Multimodal Large Language Model<br>
@@ -323,14 +323,30 @@ I was supported by the Fundamental Research Project for Young Professional from 
 <!--       <i>Conference on Neural Information Processing System (<b>NeurIPS</b>), <b><font color="red">CCF-A</font></b>, 2023</i><br>-->
 <!--        [<a href="https://papers.nips.cc/paper_files/paper/2023/file/e4724af0e2a0d52ce5a0a4e084b87f59-Paper-Conference.pdf">Paper</a>][<a href="https://github.com/xiyuanyang45/DynamicPFL">Code</a>]-->
 <!--   </li>-->
+</ul> -->
+
+
+	
+<h3>2024</h3>
+<ul>
+   <li class="publication-item">
+      <span class="paper-title">RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach</span><br>
+      <span class="authors"><b>Menghua Jiang</b>, Yin Chen*</span><br>
+      <span class="venue"><i>2024 27th International Conference on Computer Supported Cooperative Work in Design(<b>CSCWD 2024</b>), <b><font color="green">CCF-C</font></b></i></span><br>
+      <span class="links">
+        [<a href="https://link.springer.com/chapter/10.1007/978-3-031-40289-0_21" target="_blank">Paper</a>]
+        [<a href="https://github.com/whyte-yhy/SATLC">Code</a>]
+      </span>
+   </li>
 </ul>
 
-<h3>2022</h3>
+	
+<h3>2023</h3>
 <ul>
    <li class="publication-item">
       <span class="paper-title">Heavy Weighting for Potential Important Clauses</span><br>
-      <span class="authors">Hanyi Yu, <b>Hanyi Yu</b>, Yin Chen*</span><br>
-      <span class="venue"><i>The 16th International Conference on Knowledge Science, Engineering and Management(<b>KSEM</b>), <b><font color="green">CCF-C</font></b>, 2023</i></span><br>
+      <span class="authors">Hanyi Yu, <b>Menghua Jiang</b>, Yin Chen*</span><br>
+      <span class="venue"><i>The 16th International Conference on Knowledge Science, Engineering and Management(<b>KSEM 2023</b>), <b><font color="green">CCF-C</font></b></i></span><br>
       <span class="links">
         [<a href="https://link.springer.com/chapter/10.1007/978-3-031-40289-0_21" target="_blank">Paper</a>]
         [<a href="https://github.com/whyte-yhy/SATLC">Code</a>]
