--- a/index.html
+++ b/index.html
@@ -325,7 +325,41 @@ I was supported by the Fundamental Research Project for Young Professional from 
 <!--   </li>-->
 </ul> -->
 
+	
+<h3>2025</h3>
+<ul>
+   <li class="publication-item">
+      <span class="paper-title">Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting</span><br>
+      <span class="authors"><b>Menghua Jiang</b>, Haokai Gao, Shuhao Chen, Yin Chen*</span><br>
+<!--       <span class="venue"><i>The 31st International Computing and Combinatorics Conference(<b>COCOON 2025</b>), <b><font color="blue">CCF-B</font></b></i></span><br> -->
+      <span class="links">
+<!--         [<a href="https://ieeexplore.ieee.org/abstract/document/10580189" target="_blank">Paper</a>] -->
+        [<a href="https://github.com/jmhmaxsat/DeepDist">Code</a>]
+      </span>
+   </li>
+	
+   <li class="publication-item">
+      <span class="paper-title">Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information</span><br>
+      <span class="authors"><b>Menghua Jiang</b>, Rui Zhang, Yin Chen*</span><br>
+      <span class="venue"><i>The 31st International Computing and Combinatorics Conference(<b>COCOON 2025</b>), <b><font color="blue">CCF-B</font></b></i></span><br>
+      <span class="links">
+<!--         [<a href="https://ieeexplore.ieee.org/abstract/document/10580189" target="_blank">Paper</a>] -->
+        [<a href="https://github.com/jmhmaxsat/HistLS">Code</a>]
+      </span>
+   </li>
+		
+   <li class="publication-item">
+      <span class="paper-title">SNRWLS: Improve (W)PMS Solver with Weighting Strategies Related to Number of Soft Clauses</span><br>
+      <span class="authors">Shuhao Chen, <b>Menghua Jiang</b>, Yin Chen*</span><br>
+      <span class="venue"><i>The 19th International Symposium on Theoretical Aspects of Software Engineering(<b>TASE 2025</b>), <b><font color="green">CCF-C</font></b></i></span><br>
+<!--       <span class="links">
+        [<a href="https://link.springer.com/chapter/10.1007/978-3-031-40289-0_21" target="_blank">Paper</a>]
+        [<a href="https://github.com/whyte-yhy/SATLC">Code</a>]
+      </span> -->
+   </li>
+</ul>
 
+	
 	
 <h3>2024</h3>
 <ul>
@@ -334,8 +368,8 @@ I was supported by the Fundamental Research Project for Young Professional from 
       <span class="authors"><b>Menghua Jiang</b>, Yin Chen*</span><br>
       <span class="venue"><i>2024 27th International Conference on Computer Supported Cooperative Work in Design(<b>CSCWD 2024</b>), <b><font color="green">CCF-C</font></b></i></span><br>
       <span class="links">
-        [<a href="https://link.springer.com/chapter/10.1007/978-3-031-40289-0_21" target="_blank">Paper</a>]
-        [<a href="https://github.com/whyte-yhy/SATLC">Code</a>]
+        [<a href="https://ieeexplore.ieee.org/abstract/document/10580189" target="_blank">Paper</a>]
+        [<a href="https://github.com/jmhmaxsat/RASLite">Code</a>]
       </span>
    </li>
 </ul>
