--- a/index.html
+++ b/index.html
@@ -137,22 +137,21 @@ I was supported by the Fundamental Research Project for Young Professional from 
    </li>
 </ul>
 
-	
-	
+<!---------- 2024 ---------->	
 <h3>2024</h3>
 <ul>
    <li class="publication-item">
-      <span class="paper-title">
-	RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach
-      	[<a href="https://ieeexplore.ieee.org/abstract/document/10580189" target="_blank">Paper</a>]
-        [<a href="https://github.com/jmhmaxsat/RASLite">Code</a>]
-      </span><br>
+      <span class="paper-title">RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach</span><br>
       <span class="authors"><b>Menghua Jiang</b>, Yin Chen*</span><br>
       <span class="venue"><i>2024 27th International Conference on Computer Supported Cooperative Work in Design(<b>CSCWD 2024</b>), <b><font color="green">CCF-C</font></b></i></span><br>
+      <span class="links">
+        [<a href="https://ieeexplore.ieee.org/abstract/document/10580189" target="_blank">Paper</a>]
+        [<a href="https://github.com/jmhmaxsat/RASLite">Code</a>]
+      </span>
    </li>
 </ul>
 
-	
+<!---------- 2023 ---------->
 <h3>2023</h3>
 <ul>
    <li class="publication-item">
