--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta name="description" content="Menghua Jiang's homepage">
 	<link rel="stylesheet" href="jemdoc.css" type="text/css">
 	<title>Menghua Jiang (蒋梦华)</title>
-   <link rel="icon" type="image/png" href="https://www.whu.edu.cn/__local/5/2F/C2/57EDDD9FB0DF712F3AB627163C2_1EF15655_13FCA.png">
+   	<link rel="icon" type="image/x-icon" href="image/favicon.ico">
 </head>
 
 <body>
@@ -17,40 +17,33 @@
     <div id="toptitle">
     <h1>Menghua Jiang (蒋梦华) </h1>
     </div>
-<!--     <img style="max-width:30%" alt="Chinese Name photo" src="images/wenke_name_2023.jpg" class="hoverZoomLink">
-    <br> Chinese name 👆 written by handsome Dad. -->
+
     <h3> Master's student</h3>
     <p>
     School of Computer Science, South China Normal University<br>
-    Email:  <a href="mailto:jiangmenghua@m.scnu.edu.cn">jiangmenghua@m.scnu.edu.cn</a> <br>
-<!--    CV: <a href="/data/wenke_CNCV.pdf">[CN-CV]</a> / <a href="/data/wenke_CV.pdf">[CV]</a> <br>-->
-    <a href="https://scholar.google.com/citations?hl=zh-CN&user=aFoCI3MAAAAJ" target="_blank">[Google Scholar]</a>
-<!--    <a href="https://blog.csdn.net/qq_41409438?spm=1010.2135.3001.5343">[CSDN]</a>-->
-    <a href="https://www.linkedin.com/in/wenkehuang0901/" target="_blank">[LinkedIn]</a>
-    <a href="https://github.com/WenkeHuang">[Github]</a>
+    Email: <a href="mailto:jiangmenghua@m.scnu.edu.cn">jiangmenghua@m.scnu.edu.cn</a> <br>
+    <a href="https://scholar.google.com/citations?user=6rn8tzsAAAAJ&hl=zh-CN" target="_blank">[Google Scholar]</a>
+    <a href="https://github.com/jmhmaxsat">[Github]</a>
     </p>
     </td>
     <td>
     </td>
     <td>
-    <img src="images/wenke_2024.jpg" border="0" width="150">
+    <img src="images/jmh.jpg" border="0" width="150">
     </td>
     </tr></tbody>
 </table>
 
 <h2>Short Bio</h2>
 <p>
-Wenke Huang is a Ph.D. student in <a href="https://cs.whu.edu.cn/"> School of Computer Science at Wuhan University</a>, advised by  <a href="https://marswhu.github.io/">Prof. Mang Ye</a> and <a href="http://sigma.whu.edu.cn/">Prof. Bo Du</a>.
-Previously, I received my bachelor degree (Software Engineering and Finance) at <a href="https://www.whu.edu.cn/">Wuhan University</a> in 2021.<br>
-
-I was supported by the Fundamental Research Project for Young Professional from  NSFC (<b>首批</b>国自然博士生基金, <b><a href="https://cs.whu.edu.cn/info/1054/41871.htm">新闻</a></b>) and
-    the Youth Talents Support Project - Doctoral Student Special Program (<b>首届</b>中国科协青年人才托举工程-博士生专项). <br>
-
-    My research focuses on <b>Federated Learning</b> and <b>Multimodal Large Language Models</b>: <b><a href="https://drive.google.com/file/d/1itsc9vfzTWWktQppFHx79PMpYGCYmQIe/view", target="_blank">Romance Never Dies</a></b>
-    . <br>
-
-    ✨✨ (<b><font color="red">Hiring</font></b>): We are actively seeking visiting student on above fields ⬆️. Since March 2023, almost everyone who worked with me has published at least <b>Two</b> papers at CCF-A conferences.
-    If you are interested,  always feel free to contact me through  <a href="mailto:wenkehuang@whu.edu.cn">Mail</a> or <a href="data/wechat.jpg">Wechat</a>.
+ I am currently a master's student at the 
+          <a href="http://cs.scnu.edu.cn/" target="_blank">School of Computer Science</a>, 
+          <a href="https://www.scnu.edu.cn/" target="_blank">South China Normal University</a>, Guangzhou, China. 
+          My supervisor is Assoc. Prof.
+          <a href="https://www.scholat.com/ychen" target="_blank">Yin Chen (陈寅)</a>.
+          I received my bachelor's degree in 2021 from the 
+          <a href="https://scst.suda.edu.cn/" target="_blank">School of Computer Science and Technology</a>,
+          <a href="https://www.suda.edu.cn/" target="_blank">Soochow University</a>, Suzhou, China.
 
 <h2>News</h2>
 <div style="max-height: 130px; overflow-y: auto; padding: 10px; border-left: 4px solid #2c3e50; margin: 0px 0;">
@@ -81,26 +74,13 @@ I was supported by the Fundamental Research Project for Young Professional from 
   }
 </style>
 <ul style="list-style-type: none; padding-left: 0; margin: 0;">
-<!-- <li>[2025.5] Several papers on MLLM Tuning, Federated Learning are accepted by ICML2025/IJCAI 2025 (<b><font color="red">One Spotlight</font></b>)
-
-<li>[2025.2] Four papers on MLLM Tuning, Federated Learning are accepted by CVPR 2025 (<b><font color="red">Two Oral</font></b>)
-
-<li>[2025.1] One paper about Federated Learning is accepted by ICLR 2025 (<b><font color="red">One Oral</font></b>)
-
-<li>[2024.6] One Survey on Federated Generalization, Robustness, Fairness is accepted by IEEE TPAMI
-
-<li>[2024.5] Two papers are accepted by ICML 2024
-
-<li>[2023.10] One paper is accepted by IEEE TPAMI
-
-<li>[2023.2] One papers is accepted by CVPR 2023 -->
 
 [2025.5] One papers is accepted by COCOON 2025
 
 </li>
 </ul>
 </div>
-<h2>Selected Publications </h2>
+<h2>Publications </h2>
 
 †: equal contribution, *: corresponding author
 	
@@ -111,7 +91,7 @@ I was supported by the Fundamental Research Project for Young Professional from 
       <span class="authors"><b>Menghua Jiang</b>, Haokai Gao, Shuhao Chen, Yin Chen*</span><br>
 <!--       <span class="venue"><i>The 31st International Computing and Combinatorics Conference(<b>COCOON 2025</b>), <b><font color="blue">CCF-B</font></b></i></span><br> -->
       <span class="links">
-<!--         [<a href="https://ieeexplore.ieee.org/abstract/document/10580189" target="_blank">Paper</a>] -->
+        [Paper]
         [<a href="https://github.com/jmhmaxsat/DeepDist">Code</a>]
       </span>
    </li>
@@ -121,7 +101,7 @@ I was supported by the Fundamental Research Project for Young Professional from 
       <span class="authors"><b>Menghua Jiang</b>, Rui Zhang, Yin Chen*</span><br>
       <span class="venue"><i>The 31st International Computing and Combinatorics Conference(<b>COCOON 2025</b>), <b><font color="blue">CCF-B</font></b></i></span><br>
       <span class="links">
-<!--         [<a href="https://ieeexplore.ieee.org/abstract/document/10580189" target="_blank">Paper</a>] -->
+	[Paper]
         [<a href="https://github.com/jmhmaxsat/HistLS">Code</a>]
       </span>
    </li>
@@ -130,9 +110,9 @@ I was supported by the Fundamental Research Project for Young Professional from 
       <span class="paper-title">SNRWLS: Improve (W)PMS Solver with Weighting Strategies Related to Number of Soft Clauses</span><br>
       <span class="authors">Shuhao Chen, <b>Menghua Jiang</b>, Yin Chen*</span><br>
       <span class="venue"><i>The 19th International Symposium on Theoretical Aspects of Software Engineering(<b>TASE 2025</b>), <b><font color="green">CCF-C</font></b></i></span><br>
-<!--       <span class="links">
-        [<a href="https://link.springer.com/chapter/10.1007/978-3-031-40289-0_21" target="_blank">Paper</a>]
-        [<a href="https://github.com/whyte-yhy/SATLC">Code</a>]
+      <span class="links">
+        [Paper]
+	[Code]
       </span> -->
    </li>
 </ul>
