--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </p>
     </div>
     <div id="profile-picture">
-        <img src="images/jmh.jpg" alt="Menghua Jiang" border="0" width="150">
+        <img src="image/jmh.jpg" alt="Menghua Jiang" border="0" width="150">
     </div>
 </header>
 
