--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <ul>
         <li>
             Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting<br>
-            Menghua Jiang</span>, Haokai Gao, Shuhao Chen, Yin Chen*<br>
+            <b>Menghua Jiang</b>, Haokai Gao, Shuhao Chen, Yin Chen*<br>
             <i>Under Review</i><br>
             [Paper] 
             [<a href="https://github.com/jmhmaxsat/DeepDist">Code</a>]
@@ -106,7 +106,7 @@
         
         <li>
             Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information<br>
-            Menghua Jiang</span>, Rui Zhang, Yin Chen*<br>
+            <b>Menghua Jiang</b>, Rui Zhang, Yin Chen*<br>
             <i>The 31st International Computing and Combinatorics Conference (<b>COCOON 2025</b>), <b><font color="blue">CCF-B</font></b></i><br>
             [Paper] 
             [<a href="https://github.com/jmhmaxsat/HistLS">Code</a>]
@@ -114,7 +114,7 @@
         
         <li>
             SNRWLS: Improve (W)PMS Solver with Weighting Strategies Related to Number of Soft Clauses<br>
-            Shuhao Chen, <b>Menghua Jiang</b>, Yin Chen*<br>
+            Shuhao Chen, <b><span style="border-bottom: 2px solid #228B22;">Menghua Jiang</span></b>, Yin Chen*<br>
             <i>The 19th International Symposium on Theoretical Aspects of Software Engineering (<b>TASE 2025</b>), <b><font color="green">CCF-C</font></b></i><br>
             [Paper] 
             [Code]
@@ -126,8 +126,8 @@
     <h3>2024</h3>
     <ul>
         <li>
-            RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach<br>
-            <b>Menghua Jiang</b>, Yin Chen*<br>
+            <span style="color: #800080;">RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach</span><br>
+            <span style="border-bottom: 2px solid #228B22;">Menghua Jiang</span>, Yin Chen*<br>
             <i>2024 27th International Conference on Computer Supported Cooperative Work in Design (<b>CSCWD 2024</b>), <b><font color="green">CCF-C</font></b></i><br>
             [<a href="https://ieeexplore.ieee.org/abstract/document/10580189">Paper</a>] 
             [<a href="https://github.com/jmhmaxsat/RASLite">Code</a>]
