--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         
         <li>
             SNRWLS: Improve (W)PMS Solver with Weighting Strategies Related to Number of Soft Clauses<br>
-            Shuhao Chen, <b><span style="border-bottom: 2px solid #228B22;">Menghua Jiang</span></b>, Yin Chen*<br>
+            Shuhao Chen, <b>Menghua Jiang</b>, Yin Chen*<br>
             <i>The 19th International Symposium on Theoretical Aspects of Software Engineering (<b>TASE 2025</b>), <b><font color="green">CCF-C</font></b></i><br>
             [Paper] 
             [Code]
@@ -126,8 +126,8 @@
     <h3>2024</h3>
     <ul>
         <li>
-            <span style="color: #800080;">RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach</span><br>
-            <span style="border-bottom: 2px solid #228B22;">Menghua Jiang</span>, Yin Chen*<br>
+            RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach<br>
+            <b>Menghua Jiang</b>, Yin Chen*<br>
             <i>2024 27th International Conference on Computer Supported Cooperative Work in Design (<b>CSCWD 2024</b>), <b><font color="green">CCF-C</font></b></i><br>
             [<a href="https://ieeexplore.ieee.org/abstract/document/10580189">Paper</a>] 
             [<a href="https://github.com/jmhmaxsat/RASLite">Code</a>]
