--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 <!-- Header Section -->
 <header id="header">
     <div id="header-container">
-        <div id="profile-picture">
+<!--         <div id="profile-picture">
             <img src="image/jmh.jpg" alt="Menghua Jiang" border="0" width="150">
-        </div>
+        </div> -->
         <div id="header-text">
             <h1>Menghua Jiang (蒋梦华)</h1>
             <h3>Master's student</h3>
