--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <ul>
         <li>
             Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting<br>
-            <b><u>Menghua Jiang</u></b>, Haokai Gao, Shuhao Chen, Yin Chen*<br>
+            <b>Menghua Jiang</b>, Haokai Gao, Shuhao Chen, Yin Chen*<br>
             <i>Under Review</i><br>
             [Paper] 
             [<a href="https://github.com/jmhmaxsat/DeepDist">Code</a>]
@@ -108,7 +108,7 @@
         
         <li>
             Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information<br>
-            <b><u>Menghua Jiang</u></b>, Rui Zhang, Yin Chen*<br>
+            <b>Menghua Jiang</b>, Rui Zhang, Yin Chen*<br>
             <i>The 31st International Computing and Combinatorics Conference (<b>COCOON 2025</b>), <b><font color="blue">CCF-B</font></b></i><br>
             [Paper] 
             [<a href="https://github.com/jmhmaxsat/HistLS">Code</a>]
@@ -156,10 +156,11 @@
     </ul>
 </section>
 
-<!-- Footer Section -->
-<footer id="footer">
-    <div id="footer-text">Last update: 06/2025 by Menghua Jiang.</div>
-</footer>
+
+<div id="footer">
+	<div id="footer-text"></div>
+</div>
+Last update: 06/2025 by Menghua Jiang.
 
 </body>
 </html>
