--- a/index.html
+++ b/index.html
@@ -115,22 +115,14 @@
 </section>
 
 	
-<!-- Projects Section -->
-<section id="projects">
-    <h2>Projects</h2>
-    <ul>
-        <li>Project supported by the Scientific Research Innovation Project of Graduate School of South China Normal University, Principal Investigator (华南师范大学研究生科研创新计划项目，主持)</li>
-	<li>...</li>   
-    </ul>
-</section>
-
-	
-<!-- Honors and Awards -->
+<!-- Selected Awards and Honors -->
 <section id="honors">
-    <h2>Honors and Awards</h2>
+    <h2>Selected Awards and Honors</h2>
     <ul>
-        <li>National Scholarship for Master's Students (硕士研究生国家奖学金) (Top 2%)</li>
-	<li>...</li>
+        <li>Project supported by the Scientific Research Innovation Project of Graduate School of South China Normal University, Principal Investigator<br>
+	<b><font color="red">主持</font></b>华南师范大学研究生科研创新计划项目</li>
+	<li>National Scholarship for Master's Students (硕士研究生国家奖学金) (Top 2%)</li>   
+	<li>...</li>   
     </ul>
 </section>
 
