--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
     <ul>
         <li>Runner-up in the Unweighted Anytime Track, MaxSAT Evaluation 2024</li>
         <li>Third place in the Weighted Anytime Track, MaxSAT Evaluation 2024</li>
+	<li>...</li>
     </ul>
 </section>
 
@@ -119,9 +120,11 @@
 <section id="honors">
     <h2>Selected Awards and Honors</h2>
     <ul>
-        <li>Project supported by the Scientific Research Innovation Project of Graduate School of South China Normal University, Principal Investigator<br>
-	<b><font color="red">主持</font></b>华南师范大学研究生科研创新计划项目</li>
-	<li>National Scholarship for Master's Students (硕士研究生国家奖学金) (Top 2%)</li>   
+        <li>Supported by the Scientific Research Innovation Project of Graduate School of South China Normal University, 2024.5-2025.5<br>
+	    	(<b><font color="red">主持</font></b>华南师范大学研究生科研创新计划项目)</li>
+	<li>National Scholarship for Master's Students<br>
+		(硕士研究生国家奖学金, <b><font color="red">Top 2% in South China Normal University</font></b>)
+	</li>   
 	<li>...</li>   
     </ul>
 </section>
