--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <li>Supported by the Scientific Research Innovation Project of Graduate School of South China Normal University, 2024.5-2025.5<br>
 	    	(<b><font color="red">主持</font></b>华南师范大学研究生科研创新计划项目)</li>
 	<li>National Scholarship for Master's Students<br>
-		(硕士研究生国家奖学金, <b><font color="red">Top 2% in South China Normal University</font></b>)
+		(硕士研究生国家奖学金, <b><font color="red">Top 2%</font></b> in South China Normal University)
 	</li>   
 	<li>...</li>   
     </ul>
