--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     
 <!-- Competitions and Awards -->
 <section id="competitions">
-    <h2>Competitions Awards</h2>
+    <h2>Competition Awards </h2>
     <ul>
         <li>Runner-up in the Unweighted Anytime Track, MaxSAT Evaluation 2024</li>
         <li>Third place in the Weighted Anytime Track, MaxSAT Evaluation 2024</li>
