--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <ul>
         <li>
             RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach<br>
-            <b><u>Menghua Jiang</u></b>, Yin Chen*<br>
+            <b>Menghua Jiang</b>, Yin Chen*<br>
             <i>2024 27th International Conference on Computer Supported Cooperative Work in Design (<b>CSCWD 2024</b>), <b><font color="green">CCF-C</font></b></i><br>
             [<a href="https://ieeexplore.ieee.org/abstract/document/10580189">Paper</a>] 
             [<a href="https://github.com/jmhmaxsat/RASLite">Code</a>]
