--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <h3>2025</h3>
     <ul>
         <li>
-            <span style="color: #800080;">Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting</span><br>
+            Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting<br>
             <b>Menghua Jiang</b>, Haokai Gao, Shuhao Chen, Yin Chen*<br>
             <i>Under Review</i><br>
             [Paper] 
@@ -83,7 +83,7 @@
         </li>
         
         <li>
-            <span style="color: #800080;">Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information</span><br>
+            Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information<br>
             <b>Menghua Jiang</b>, Rui Zhang, Yin Chen*<br>
             <i>The 31st International Computing and Combinatorics Conference (<b>COCOON 2025</b>), <b><font color="blue">CCF-B</font></b></i><br>
             [Paper] 
@@ -96,7 +96,7 @@
     <h3>2024</h3>
     <ul>
         <li>
-            <span style="color: #800080;">RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach</span><br>
+            RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach<br>
             <b>Menghua Jiang</b>, Yin Chen*<br>
             <i>2024 27th International Conference on Computer Supported Cooperative Work in Design (<b>CSCWD 2024</b>), <b><font color="green">CCF-C</font></b></i><br>
             [<a href="https://ieeexplore.ieee.org/abstract/document/10580189">Paper</a>] 
