--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     
     
     <!--------------------------------------------- 2024 Publications --------------------------------------------->
-    <h3>2024</h3>
+    <h3 style="color: #FF5733;">2024</h3>
     <ul>
         <li>
             RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach<br>
