--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     †: equal contribution, * : corresponding author
     
     <!--------------------------------------------- 2025 Publications --------------------------------------------->
-    <h3>2025</h3>
+    <h3 style="color: gray;">2024</h3>
     <ul>
         <li>
             Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting<br>
