--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <li>
             Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information<br>
             <b>Menghua Jiang</b>, Rui Zhang, Yin Chen*<br>
-            <i>The 31st International Computing and Combinatorics Conference (<b>COCOON 2025</b>), <b><font color="blue">CCF-B</font></b></i><br>
+            <i>Proceedings of the 31st International Computing and Combinatorics Conference (<b>COCOON 2025</b>), <b><font color="blue">CCF-B</font></b></i><br>
             [Paper] 
             [<a href="https://github.com/jmhmaxsat/HistLS">Code</a>]
         </li>
@@ -98,7 +98,7 @@
         <li>
             RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach<br>
             <b>Menghua Jiang</b>, Yin Chen*<br>
-            <i>2024 27th International Conference on Computer Supported Cooperative Work in Design (<b>CSCWD 2024</b>), <b><font color="green">CCF-C</font></b></i><br>
+            <i>Proceedings of the 27th International Conference on Computer Supported Cooperative Work in Design (<b>CSCWD 2024</b>), <b><font color="green">CCF-C</font></b></i><br>
             [<a href="https://ieeexplore.ieee.org/abstract/document/10580189">Paper</a>] 
             [<a href="https://github.com/jmhmaxsat/RASLite">Code</a>]
         </li>
