--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <li>
             Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting<br>
             <b>Menghua Jiang</b>, Haokai Gao, Shuhao Chen, Yin Chen*<br>
-            <i>Under Review</i><br>
+            <i>Proceedings of the 28th European Conference on Artificial Intelligence (<b>ECAI 2025</b>), <b><font color="blue">CCF-B</font></b></i><br>
             [Paper] 
             [<a href="https://github.com/jmhmaxsat/DeepDist">Code</a>]
         </li>
