--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
     <h2>News</h2>
     <div class="news-container">
         <ul class="news-list">
-            <li>[2025.5] One paper is accepted by COCOON 2025</li>
+		<li>[2025.7] One paper is accepted by ECAI 2025</li>
+            	<li>[2025.5] One paper is accepted by COCOON 2025</li>
         </ul>
     </div>
 </section>
@@ -133,7 +134,7 @@
 <div id="footer">
 	<div id="footer-text"></div>
 </div>
-Last update: 06/2025 by Menghua Jiang.
+Last update: 07/2025 by Menghua Jiang.
 
 </body>
 </html>
