--- a/index.html
+++ b/index.html
@@ -76,6 +76,15 @@
     <h3 style="color: gray;">2025</h3>
     <ul>
         <li>
+            Disentangling Bias by Modeling Intra- and Inter-modal Causal Attention for Multimodal Sentiment Analysis<br>
+            <b>Menghua Jiang</b>, Yuxia Lin, Baoliang Chen, Haifeng Hu, Yuncheng Jiang, Sijie Mai*<br>
+            <i>Under Review</i><br>
+            [<a href="https://arxiv.org/abs/2508.04999">arXiv</a>]  
+			[Paper] 
+            [Code]
+        </li>
+		
+		<li>
             Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting<br>
             <b>Menghua Jiang</b>, Haokai Gao, Shuhao Chen, Yin Chen*<br>
             <i>Proceedings of the 28th European Conference on Artificial Intelligence (<b>ECAI 2025</b>), <b><font color="blue">CCF-B</font></b></i><br>
@@ -87,7 +96,7 @@
             Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information<br>
             <b>Menghua Jiang</b>, Rui Zhang, Yin Chen*<br>
             <i>Proceedings of the 31st International Computing and Combinatorics Conference (<b>COCOON 2025</b>), <b><font color="blue">CCF-B</font></b></i><br>
-            [Paper] 
+            [<a href="https://link.springer.com/chapter/10.1007/978-981-95-0215-8_10">Paper</a>]  
             [<a href="https://github.com/jmhmaxsat/HistLS">Code</a>]
         </li>
     </ul>
