--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         
         <li>
             <b>Menghua Jiang</b>, Rui Zhang, Yin Chen*<br>
-			Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information<br>
+			<span style="color: gray;">Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information</span><br>
             <i>Proceedings of the 31st International Computing and Combinatorics Conference (<b>COCOON 2025</b>), <b><font color="blue">CCF-B</font></b></i><br>
             [<a href="https://link.springer.com/chapter/10.1007/978-981-95-0215-8_10">Paper</a>]  
             [<a href="https://github.com/jmhmaxsat/HistLS">Code</a>]
