--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <ul>
         <li>
             <b>Menghua Jiang</b>, Yuxia Lin, Baoliang Chen, Haifeng Hu, Yuncheng Jiang, Sijie Mai*<br>
-			Disentangling Bias by Modeling Intra- and Inter-modal Causal Attention for Multimodal Sentiment Analysis<br>
+			<span style="color: gray;">Disentangling Bias by Modeling Intra- and Inter-modal Causal Attention for Multimodal Sentiment Analysis</span><br>
             <i>Under Review</i><br>
             [<a href="https://arxiv.org/abs/2508.04999">arXiv</a>]  
 			[Paper] 
@@ -86,7 +86,7 @@
 		
 		<li>
             <b>Menghua Jiang</b>, Haokai Gao, Shuhao Chen, Yin Chen*<br>
-			Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting<br>
+			<span style="color: gray;">Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting</span><br>
             <i>Proceedings of the 28th European Conference on Artificial Intelligence (<b>ECAI 2025</b>), <b><font color="blue">CCF-B</font></b></i><br>
             [Paper] 
             [<a href="https://github.com/jmhmaxsat/DeepDist">Code</a>]
@@ -107,7 +107,7 @@
     <ul>
         <li>
             <b>Menghua Jiang</b>, Yin Chen*<br>
-			RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach<br>
+			<span style="color: gray;">RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach</span><br>
             <i>Proceedings of the 27th International Conference on Computer Supported Cooperative Work in Design (<b>CSCWD 2024</b>)</i><br>
             [<a href="https://ieeexplore.ieee.org/abstract/document/10580189">Paper</a>] 
             [<a href="https://github.com/jmhmaxsat/RASLite">Code</a>]
