--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </li>
 		
 		<li>
-            <u>Menghua Jiang</u>, Haokai Gao, Shuhao Chen, Yin Chen*<br>
+            <b>Menghua Jiang</b>, Haokai Gao, Shuhao Chen, Yin Chen*<br>
 			<span style="color: gray;">Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting</span><br>
             <i>Proceedings of the 28th European Conference on Artificial Intelligence (<b>ECAI 2025</b>), <b><font color="blue">CCF-B</font></b></i><br>
             [Paper] 
@@ -93,7 +93,7 @@
         </li>
         
         <li>
-            <b><u>Menghua Jiang</u></b>, Rui Zhang, Yin Chen*<br>
+            <b>Menghua Jiang</b>, Rui Zhang, Yin Chen*<br>
 			<span style="color: gray;">Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information</span><br>
             <i>Proceedings of the 31st International Computing and Combinatorics Conference (<b>COCOON 2025</b>), <b><font color="blue">CCF-B</font></b></i><br>
             [<a href="https://link.springer.com/chapter/10.1007/978-981-95-0215-8_10">Paper</a>]  
