--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
 		
 		<li>
             <b>Menghua Jiang</b>, Haokai Gao, Shuhao Chen, Yin Chen*<br>
-			<span style="color: gray;">Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting</span><br>
+			<span style="color: #4a4a4a;">
+				Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting
+			</span><br>
             <i>Proceedings of the 28th European Conference on Artificial Intelligence (<b>ECAI 2025</b>), <b><font color="blue">CCF-B</font></b></i><br>
             [Paper] 
             [<a href="https://github.com/jmhmaxsat/DeepDist">Code</a>]
@@ -94,7 +96,9 @@
         
         <li>
             <b>Menghua Jiang</b>, Rui Zhang, Yin Chen*<br>
-			<span style="color: gray;">Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information</span><br>
+			<span style="color: #1a237e;">
+				Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information
+			</span><br>
             <i>Proceedings of the 31st International Computing and Combinatorics Conference (<b>COCOON 2025</b>), <b><font color="blue">CCF-B</font></b></i><br>
             [<a href="https://link.springer.com/chapter/10.1007/978-981-95-0215-8_10">Paper</a>]  
             [<a href="https://github.com/jmhmaxsat/HistLS">Code</a>]
@@ -107,10 +111,12 @@
     <ul>
         <li>
             <b>Menghua Jiang</b>, Yin Chen*<br>
-			<span style="color: gray;">RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach</span><br>
-            <i>Proceedings of the 27th International Conference on Computer Supported Cooperative Work in Design (<b>CSCWD 2024</b>)</i><br>
-            [<a href="https://ieeexplore.ieee.org/abstract/document/10580189">Paper</a>] 
-            [<a href="https://github.com/jmhmaxsat/RASLite">Code</a>]
+			<span style="color: #2c3e50;">
+			    RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach
+			</span><br>
+			<i>Proceedings of the 27th International Conference on Computer Supported Cooperative Work in Design (<b>CSCWD</b> 2024)</i><br>
+			[<a href="https://ieeexplore.ieee.org/abstract/document/10580189">Paper</a>] 
+			[<a href="https://github.com/jmhmaxsat/RASLite">Code</a>]
         </li>
     </ul>
 
