--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
     <ul>
         <li>
             <b>Menghua Jiang</b>, Yuxia Lin, Baoliang Chen, Haifeng Hu, Yuncheng Jiang, Sijie Mai*<br>
-			<span style="color: gray;">Disentangling Bias by Modeling Intra- and Inter-modal Causal Attention for Multimodal Sentiment Analysis</span><br>
+			<span style="color: gray;">
+				Disentangling Bias by Modeling Intra- and Inter-modal Causal Attention for Multimodal Sentiment Analysis
+			</span><br>
             <i>Under Review</i><br>
             [<a href="https://arxiv.org/abs/2508.04999">arXiv</a>]  
 			[Paper] 
@@ -86,7 +88,7 @@
 		
 		<li>
             <b>Menghua Jiang</b>, Haokai Gao, Shuhao Chen, Yin Chen*<br>
-			<span style="color: #4a4a4a;">
+			<span style="color: gray;">
 				Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting
 			</span><br>
             <i>Proceedings of the 28th European Conference on Artificial Intelligence (<b>ECAI 2025</b>), <b><font color="blue">CCF-B</font></b></i><br>
@@ -96,7 +98,7 @@
         
         <li>
             <b>Menghua Jiang</b>, Rui Zhang, Yin Chen*<br>
-			<span style="color: #1a237e;">
+			<span style="color: gray;">
 				Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information
 			</span><br>
             <i>Proceedings of the 31st International Computing and Combinatorics Conference (<b>COCOON 2025</b>), <b><font color="blue">CCF-B</font></b></i><br>
@@ -111,7 +113,7 @@
     <ul>
         <li>
             <b>Menghua Jiang</b>, Yin Chen*<br>
-			<span style="color: #2c3e50;">
+			<span style="color: gray;">
 			    RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach
 			</span><br>
 			<i>Proceedings of the 27th International Conference on Computer Supported Cooperative Work in Design (<b>CSCWD</b> 2024)</i><br>
