--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <ul>
         <li>
             <b>Menghua Jiang</b>, Yin Chen*<br>
-			<span style="color: gray;">
+			<span style="color: #c5c500;">
 			    RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach
 			</span><br>
 			<i>Proceedings of the 27th International Conference on Computer Supported Cooperative Work in Design (<b>CSCWD</b> 2024)</i><br>
