--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <ul>
         <li>
             <b>Menghua Jiang</b>, Yuxia Lin, Baoliang Chen, Haifeng Hu, Yuncheng Jiang, Sijie Mai*<br>
-			<span style="color: gray;">
+			<span style="color: #c5c500;">
 				Disentangling Bias by Modeling Intra- and Inter-modal Causal Attention for Multimodal Sentiment Analysis
 			</span><br>
             <i>Under Review</i><br>
@@ -88,7 +88,7 @@
 		
 		<li>
             <b>Menghua Jiang</b>, Haokai Gao, Shuhao Chen, Yin Chen*<br>
-			<span style="color: gray;">
+			<span style="color: #c5c500;">
 				Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting
 			</span><br>
             <i>Proceedings of the 28th European Conference on Artificial Intelligence (<b>ECAI 2025</b>), <b><font color="blue">CCF-B</font></b></i><br>
@@ -98,7 +98,7 @@
         
         <li>
             <b>Menghua Jiang</b>, Rui Zhang, Yin Chen*<br>
-			<span style="color: gray;">
+			<span style="color: #c5c500;">
 				Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information
 			</span><br>
             <i>Proceedings of the 31st International Computing and Combinatorics Conference (<b>COCOON 2025</b>), <b><font color="blue">CCF-B</font></b></i><br>
