--- a/index.html
+++ b/index.html
@@ -112,9 +112,7 @@
     <h3 style="color: gray;">2024</h3>
     <ul>
         <li>
-            <span style="color: #c5c500;">
-			    RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach
-			</span><br>
+			⭐RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach
 			<b>Menghua Jiang</b>, Yin Chen*<br>
 			<i>Proceedings of the 27th International Conference on Computer Supported Cooperative Work in Design (<b>CSCWD</b> 2024)</i><br>
 			[<a href="https://ieeexplore.ieee.org/abstract/document/10580189">Paper</a>] 
