--- a/index.html
+++ b/index.html
@@ -76,9 +76,7 @@
     <h3 style="color: gray;">2025</h3>
     <ul>
         <li>
- 			<span style="color: #c5c500;">
-				Disentangling Bias by Modeling Intra- and Inter-modal Causal Attention for Multimodal Sentiment Analysis
-			</span><br>           
+			⭐Disentangling Bias by Modeling Intra- and Inter-modal Causal Attention for Multimodal Sentiment Analysis<br>         
 			<b>Menghua Jiang</b>, Yuxia Lin, Baoliang Chen, Haifeng Hu, Yuncheng Jiang, Sijie Mai*<br>
             <i>Under Review</i><br>
             [<a href="https://arxiv.org/abs/2508.04999">arXiv</a>]  
@@ -87,9 +85,7 @@
         </li>
 		
 		<li>
-            <span style="color: #c5c500;">
-				Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting
-			</span><br>
+			⭐Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting<br>
 			<b>Menghua Jiang</b>, Haokai Gao, Shuhao Chen, Yin Chen*<br>
             <i>Proceedings of the 28th European Conference on Artificial Intelligence (<b>ECAI 2025</b>), <b><font color="blue">CCF-B</font></b></i><br>
             [Paper] 
@@ -97,9 +93,7 @@
         </li>
         
         <li>
-            <span style="color: #c5c500;">
-				Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information
-			</span><br>
+			⭐Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information<br>
 			<b>Menghua Jiang</b>, Rui Zhang, Yin Chen*<br>
             <i>Proceedings of the 31st International Computing and Combinatorics Conference (<b>COCOON 2025</b>), <b><font color="blue">CCF-B</font></b></i><br>
             [<a href="https://link.springer.com/chapter/10.1007/978-981-95-0215-8_10">Paper</a>]  
@@ -112,7 +106,7 @@
     <h3 style="color: gray;">2024</h3>
     <ul>
         <li>
-			⭐RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach
+			⭐RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach<br>
 			<b>Menghua Jiang</b>, Yin Chen*<br>
 			<i>Proceedings of the 27th International Conference on Computer Supported Cooperative Work in Design (<b>CSCWD</b> 2024)</i><br>
 			[<a href="https://ieeexplore.ieee.org/abstract/document/10580189">Paper</a>] 
