--- a/index.html
+++ b/index.html
@@ -76,25 +76,28 @@
     <h3 style="color: gray;">2025</h3>
     <ul>
         <li>
-			⭐Disentangling Bias by Modeling Intra- and Inter-modal Causal Attention for Multimodal Sentiment Analysis<br>         
 			<b>Menghua Jiang</b>, Yuxia Lin, Baoliang Chen, Haifeng Hu, Yuncheng Jiang, Sijie Mai*<br>
+			<span style="color: gray;">
+				Disentangling Bias by Modeling Intra- and Inter-modal Causal Attention for Multimodal Sentiment Analysis<br>         
+			</span><br>
             <i>Under Review</i><br>
             [<a href="https://arxiv.org/abs/2508.04999">arXiv</a>]  
-			[Paper] 
-            [Code]
         </li>
 		
 		<li>
-			⭐Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting<br>
 			<b>Menghua Jiang</b>, Haokai Gao, Shuhao Chen, Yin Chen*<br>
+			<span style="color: gray;">
+				Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting<br>
+			</span><br>
             <i>Proceedings of the 28th European Conference on Artificial Intelligence (<b>ECAI 2025</b>), <b><font color="blue">CCF-B</font></b></i><br>
-            [Paper] 
             [<a href="https://github.com/jmhmaxsat/DeepDist">Code</a>]
         </li>
         
         <li>
-			⭐Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information<br>
-			<b>Menghua Jiang</b>, Rui Zhang, Yin Chen*<br>
+			<b>Menghua Jiang</b>, Rui Zhang, Yin Chen*<br>		
+			<span style="color: gray;">
+				Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information<br>
+			</span><br>
             <i>Proceedings of the 31st International Computing and Combinatorics Conference (<b>COCOON 2025</b>), <b><font color="blue">CCF-B</font></b></i><br>
             [<a href="https://link.springer.com/chapter/10.1007/978-981-95-0215-8_10">Paper</a>]  
             [<a href="https://github.com/jmhmaxsat/HistLS">Code</a>]
@@ -106,8 +109,10 @@
     <h3 style="color: gray;">2024</h3>
     <ul>
         <li>
-			⭐RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach<br>
 			<b>Menghua Jiang</b>, Yin Chen*<br>
+			<span style="color: gray;">
+				RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach
+			</span><br>
 			<i>Proceedings of the 27th International Conference on Computer Supported Cooperative Work in Design (<b>CSCWD</b> 2024)</i><br>
 			[<a href="https://ieeexplore.ieee.org/abstract/document/10580189">Paper</a>] 
 			[<a href="https://github.com/jmhmaxsat/RASLite">Code</a>]
