--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@
     <h3 style="color: gray;">2025</h3>
     <ul>
         <li>
+			<b>Menghua Jiang</b>, Yuncheng Jiang, Haifeng Hu, Sijie Mai*<br>
+			<span style="color: gray;">
+				Towards Minimal Causal Representations for Human Multimodal Language Understanding      
+			</span><br>
+            <i>Under Review</i><br>
+        </li>
+		
+		<li>
 			<b>Menghua Jiang</b>, Yuxia Lin, Baoliang Chen, Haifeng Hu, Yuncheng Jiang, Sijie Mai*<br>
 			<span style="color: gray;">
 				Disentangling Bias by Modeling Intra- and Inter-modal Causal Attention for Multimodal Sentiment Analysis         
