--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 				Towards Minimal Causal Representations for Human Multimodal Language Understanding      
 			</span><br>
             <i>Under Review</i><br>
+			[<a href="https://arxiv.org/abs/2508.04999">arXiv</a>]  
         </li>
 		
 		<li>
@@ -89,7 +90,7 @@
 				Disentangling Bias by Modeling Intra- and Inter-modal Causal Attention for Multimodal Sentiment Analysis         
 			</span><br>
             <i>Under Review</i><br>
-            [<a href="https://arxiv.org/abs/2508.04999">arXiv</a>]  
+            [<a href="https://arxiv.org/abs/2509.21805">arXiv</a>]  
         </li>
 		
 		<li>
@@ -143,12 +144,13 @@
 <section id="honors">
     <h2>Selected Awards and Honors</h2>
     <ul>
-        <li>Supported by the Scientific Research Innovation Project of Graduate School of South China Normal University, 2024.5-2025.5<br>
-	    	(<b><font color="red">主持</font></b>华南师范大学研究生科研创新计划项目)</li>
-	<li>National Scholarship for Master's Students<br>
-		(硕士研究生国家奖学金, <b><font color="red">Top 2%</font></b> in South China Normal University)
-	</li>   
-	<li>...</li>   
+		<li>National Scholarship for Master's Students, 2024-2025<br>
+			(硕士研究生国家奖学金, <b><font color="red">Top 2%</font></b> in South China Normal University)
+		</li>   
+		<li>Supported by the Scientific Research Innovation Project of Graduate School of South China Normal University, 2024.5-2025.5<br>
+			(<b><font color="red">主持</font></b>华南师范大学研究生科研创新计划项目)
+		</li> 	
+		<li>...</li>   
     </ul>
 </section>
 
@@ -156,7 +158,7 @@
 <div id="footer">
 	<div id="footer-text"></div>
 </div>
-Last update: 07/2025 by Menghua Jiang.
+Last update: 10/2025 by Menghua Jiang.
 
 </body>
 </html>
