--- a/index.html
+++ b/index.html
@@ -131,11 +131,9 @@
         <li>
 			<b>Menghua Jiang</b>, Yin Chen*<br>
 			<span style="color: gray;">
-				RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach
+				RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach[<a href="https://ieeexplore.ieee.org/abstract/document/10580189">paper</a>] [<a href="https://github.com/jmhmaxsat/RASLite">code</a>]
 			</span><br>
-			<i>Proceedings of the 27th International Conference on Computer Supported Cooperative Work in Design (<b>CSCWD 2024</b>)</i><br>
-			[<a href="https://ieeexplore.ieee.org/abstract/document/10580189">Paper</a>] 
-			[<a href="https://github.com/jmhmaxsat/RASLite">Code</a>]
+			<i>Proceedings of the 27th International Conference on Computer Supported Cooperative Work in Design (<b>CSCWD 2024</b>)</i>
         </li>
     </ul>
 
