--- a/index.html
+++ b/index.html
@@ -53,7 +53,23 @@
     </p>
 </section>
 
+	
+<!-- Education Section -->
+<section id="education">
+    <h2>Education</h2>
+    <ul>
+        <li>
+            <strong>M.S. in Computer Science</strong>, South China Normal University, Guangzhou, China
+            <span class="date">Sep 2022 - Jun 2025</span>
+        </li>
+        <li>
+            <strong>B.Eng. in Software Engineering</strong>, Soochow University, Suzhou, China
+            <span class="date">Sep 2017 - Jun 2021</span>
+        </li>
+    </ul>
+</section>
 
+	
 <!-- News Section -->
 <section id="news">
     <h2>News</h2>
