--- a/index.html
+++ b/index.html
@@ -54,17 +54,20 @@
 </section>
 
 	
-<!-- Education Section -->
 <section id="education">
     <h2>Education</h2>
-    <ul>
+    <ul class="education-list">
         <li>
-            <strong>M.S. in Computer Science</strong>, South China Normal University, Guangzhou, China
-            <span class="date">Sep 2022 - Jun 2025</span>
+            <div class="education-item">
+                <strong>M.S. in Computer Science</strong>, South China Normal University, Guangzhou, China
+                <span class="date">Sep 2022 - Jun 2025</span>
+            </div>
         </li>
         <li>
-            <strong>B.Eng. in Software Engineering</strong>, Soochow University, Suzhou, China
-            <span class="date">Sep 2017 - Jun 2021</span>
+            <div class="education-item">
+                <strong>B.Eng. in Software Engineering</strong>, Soochow University, Suzhou, China
+                <span class="date">Sep 2017 - Jun 2021</span>
+            </div>
         </li>
     </ul>
 </section>
