--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </p>
 </section>
 
-
+	
 <!-- News Section -->
 <section id="news">
     <h2>News</h2>
@@ -63,6 +63,22 @@
             	<li>[2025.5] One paper is accepted by COCOON 2025</li>
         </ul>
     </div>
+</section>
+
+	
+<!-- Education Section -->
+<section id="education">
+    <h2>Education</h2>
+    <ul>
+		<li>South China Normal University<br>
+			M.S. in Computer Science, Sep 2022 - Jun 2025<br>
+			Advisor: Assoc. Prof. <a href="https://www.scholat.com/ychen" target="_blank">Yin Chen (陈寅)</a>
+		</li>   
+		<li>Soochow University<br>
+			B.Eng. in Software Engineering, Sep 2017 - Jun 2021<br>
+		</li> 	
+		<li>...</li>   
+    </ul>
 </section>
 	
 
