--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <h2>Education</h2>
     <ul>
 		<li><a href="https://www.scnu.edu.cn/" target="_blank">South China Normal University</a><br>
-			M.S. in Computer Science, &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sep 2022 - Jun 2025<br>
+			M.S. in Computer Science, &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sep 2022 - Jun 2025<br>
 			Advisor: Assoc. Prof. <a href="https://www.scholat.com/ychen" target="_blank">Yin Chen</a>
 		</li>   
 		<li><a href="https://www.suda.edu.cn/" target="_blank">Soochow University</a><br>
