--- a/index.html
+++ b/index.html
@@ -42,15 +42,18 @@
 <!-- Short Bio Section -->
 <section id="short-bio">
     <h2>Short Bio</h2>
-    <p>
-        I am currently a master's student at the 
-        <a href="http://cs.scnu.edu.cn/" target="_blank">School of Computer Science</a>, 
-        <a href="https://www.scnu.edu.cn/" target="_blank">South China Normal University</a>, Guangzhou, China. 
-        My supervisor is Assoc. Prof. <a href="https://www.scholat.com/ychen" target="_blank">Yin Chen (陈寅)</a>.
-        I received my bachelor's degree in 2021 from the 
-        <a href="https://scst.suda.edu.cn/" target="_blank">School of Computer Science and Technology</a>,
-        <a href="https://www.suda.edu.cn/" target="_blank">Soochow University</a>, Suzhou, China.
-    </p>
+   	<p>
+    I am currently a Research Assistant, fortunately advised by 
+    <a href="https://scholar.google.com/citations?user=pLHqgLIAAAAJ&hl=zh-CN&oi=ao" target="_blank">Prof. Sijie Mai</a>. 
+    Previously, I received my Master’s degree in Computer Science from the 
+    <a href="http://cs.scnu.edu.cn/" target="_blank">School of Computer Science</a>, 
+    <a href="https://www.scnu.edu.cn/" target="_blank">South China Normal University</a> in 2025, 
+    where I was advised by 
+    <a href="https://www.scholat.com/ychen" target="_blank">Assoc. Prof. Yin Chen</a>. 
+    I obtained my Bachelor’s degree in Software Engineering from the 
+    <a href="https://scst.suda.edu.cn/" target="_blank">School of Computer Science and Technology</a>, 
+    <a href="https://www.suda.edu.cn/" target="_blank">Soochow University</a> in 2021.
+	</p>
 </section>
 
 	
