--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     Previously, I received my Master’s degree in Computer Science from the 
     <a href="http://cs.scnu.edu.cn/" target="_blank">School of Computer Science</a>, 
     <a href="https://www.scnu.edu.cn/" target="_blank">South China Normal University</a> in 2025, 
-    where I was fortunately advised by 
+    where I had the privilege of being advised by 
     <a href="https://www.scholat.com/ychen" target="_blank">Assoc. Prof. Yin Chen</a>. 
     I obtained my Bachelor’s degree in Software Engineering from the 
     <a href="https://scst.suda.edu.cn/" target="_blank">School of Computer Science and Technology</a>, 
